chore: Improve Apache Camel JBang integration verification